Изменены SetMinSalaryCommand и SetMaxSalaryCommand: сброс противоположного значения ЗП, если минимальная > максимальной